# PIXIE

./: Cargo.toml  README.md  structure.txt
src/: lib.rs  main.rs
src/core/: mod.rs  processor.rs
src/processors/: batch.rs  compressor.rs  loader.rs  metadata.rs  mod.rs  resizer.rs
src/utils/: mod.rs
tests/: integration.rs
