[package]
name = "pixie"
version = "0.1.0"
edition = "2021"
description = "Fast image resizer and optimizer in Rust"
authors = ["Your Name"]
license = "MIT"

[dependencies]
image = "0.24"
imageproc = "0.23"
rayon = "1.10"
exif = "0.6"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.5"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
anyhow = "1.0"  # For better error handling
thiserror = "1.0"  # For custom error types

[dev-dependencies]
tempfile = "3.10"
assert_fs = "1.0"