[package]
name = "pixie"
version = "0.1.0"
edition = "2021"
description = "Fast image resizer and optimizer in Rust"
authors = ["KAPKEPOT"]
license = "MIT"

[dependencies]
image = { version = "0.25", features = ["jpeg", "png", "webp", "tiff", "gif", "bmp"] }
imageproc = "0.23"
rayon = "1.10"
exif = "0.0.1"
#kamadak-exif = "0.6.1"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.5"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
anyhow = "1.0"  
thiserror = "1.0"
oxipng = "9.0"  

[dev-dependencies]
tempfile = "3.10"
assert_fs = "1.0"